feat: Alterar tipo de prioridade para string e adicionar categoria nas listas
