# backend/app/models/list.rb
@@ -2,5 +2,6 @@ class List < ApplicationRecord
   has_many :items, dependent: :destroy
   
   validates :title, presence: true, length: { minimum: 3 }
-  validates :priority, numericality: { only_integer: true, greater_than_or_equal_to: 0 }
+  validates :priority, presence: true
+  validates :category, presence: true
 end
