# backend/db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[8.0].define(version: 2025_01_09_153548) do
+ActiveRecord::Schema[8.0].define(version: 2025_01_13_185710) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "pg_catalog.plpgsql"
 
@@ -30,8 +30,9 @@ ActiveRecord::Schema[8.0].define(version: 2025_01_09_153548) do
     t.string "title"
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
-    t.integer "priority", default: 0
+    t.string "priority", default: "0"
     t.boolean "completed", default: false
+    t.string "category"
   end
 
   add_foreign_key "items", "lists"
